# DD_Project

./: CMakeLists.txt  README.md  Simplifier.cpp  Simplifier.h  TermGroup.cpp  TermGroup.h  VerilogGenerator.cpp  VerilogGenerator.h  main.cpp  output.v  test1  test10  test2  test3  test4  test5  test6  test7  test8  test9
