cmake_minimum_required(VERSION 4.0)
project(DD_Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(DD_Project
        main.cpp
        test1
        test2
        test3
        test4
        test5
        test6
        test7
        test8
        test9
        test10
        Simplifier.cpp
        Simplifier.h
        TermGroup.cpp
        TermGroup.h
        VerilogGenerator.cpp)
